deploy/k8s/011-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todone-server-cluster-ip-service
  namespace: todone
spec:
  type: ClusterIP
  selector:
    component: todone-server
  ports:
    - name: go
      port: 4000
      targetPort: 4000
