deploy/k8s/003-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todone-ingress
  namespace: todone
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - todone.brennonloveless.com
      secretName: todone-crt
  rules:
    - host: todone.brennonloveless.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: todone-server-cluster-ip-service
              servicePort: 4000
